--- a/saitae-web/src/main/webapp/pages/nominaA.xhtml
+++ b/saitae-web/src/main/webapp/pages/nominaA.xhtml
@@ -37,7 +37,7 @@
                     -->
 
                     <p:column headerText="NIE" style="width: 100px">
-                        <p:outputLabel value="#{e.idestudiante}"/>
+                        <p:outputLabel value="#{e.idestudiante.toString().substring(1)}"/>
                     </p:column>
 
                     <p:column headerText="Nombre">
