--- a/saitae-web/src/main/webapp/pages/academico.xhtml
+++ b/saitae-web/src/main/webapp/pages/academico.xhtml
@@ -51,16 +51,11 @@
                                 <p:column style="width:35px">
                                     <p:rowEditor />
                                 </p:column>
-                            </p:dataTable> 
-                            <div class="ui-g">
-                                <div class="ui-g-12">
-                                    <p:commandButton value="+" styleClass="ui-priority-primary" 
-                                                     process="@this" update=":form:msgs"
-                                                     action="#{tipoController.onAddNew('tipomateria')}" 
-                                                     oncomplete="PF('materia1').addRow();" 
-                                                     title="Agregar nuevo Tipo de Materia."/>
-                                </div>
-                            </div>
+                            </p:dataTable>
+                            <p:commandButton value="+" styleClass="ui-priority-primary" 
+                                             process="@this" update=":form:msgs tipomateria"
+                                             action="#{tipoController.onAddNew('tipomateria')}"
+                                             title="Agregar nuevo Tipo de Materia."/>
                         </p:tab>
                         <p:tab title="Materias">
                             <p:dataTable id="materia" var="m" value="#{tipoController.materias}" 
@@ -107,14 +102,9 @@
                                     <p:rowEditor />
                                 </p:column>
                             </p:dataTable>
-                            <div class="ui-g">
-                                <div class="ui-g-12">
-                                    <p:commandButton value="Agregar Nuevo" styleClass="ui-priority-primary" 
-                                                     process="@this" update=":form:msgs"
-                                                     action="#{tipoController.onAddNew('materia')}" 
-                                                     oncomplete="PF('materia1').addRow();"/>
-                                </div>
-                            </div>
+                            <p:commandButton value="Agregar Nuevo" styleClass="ui-priority-primary" 
+                                             process="@this" update=":form:msgs materia"
+                                             action="#{tipoController.onAddNew('materia')}"/>
                         </p:tab>
                         <p:tab title="Horas Clase">
                             <p:dataTable id="horario" var="h" value="#{tipoController.horario}" rowKey="#{h.idhorario}"
@@ -138,20 +128,16 @@
                                                    disabled="true" pattern="hh:mm a"/>
                                 </p:column>
                             </p:dataTable>
-                            <div class="ui-g">
-                                <div class="ui-g-12">
-                                    <p:commandButton value="+" styleClass="ui-priority-primary" 
-                                                     update=":form0:msgs h1"
-                                                     onclick="PF('Dhorario').show();"
-                                                     title="Agregar Horario."/>
-                                    <p:contextMenu for="horario">
-                                        <p:menuitem value="Modificar" update="h1 form0:msgs form:tw:horario"
-                                                    icon="fa fa-edit" onclick="PF('Dhorario').show()"/>
-                                        <p:menuitem value="Eliminar" update="h1 form0:msgs form:tw:horario"
-                                                    icon="fa fa-trash" actionListener="#{tipoController.eliminarHorario()}"/>
-                                    </p:contextMenu>
-                                </div>
-                            </div>
+                            <p:commandButton value="+" styleClass="ui-priority-primary" 
+                                             update=":form0:msgs h1 horario"
+                                             onclick="PF('Dhorario').show();"
+                                             title="Agregar Horario."/>
+                            <p:contextMenu for="horario">
+                                <p:menuitem value="Modificar" update="h1 form0:msgs form:tw:horario"
+                                            icon="fa fa-edit" onclick="PF('Dhorario').show()"/>
+                                <p:menuitem value="Eliminar" update="h1 form0:msgs form:tw:horario"
+                                            icon="fa fa-trash" actionListener="#{tipoController.eliminarHorario()}"/>
+                            </p:contextMenu>
                         </p:tab>
                         <p:tab title="Grados">
                             <p:dataTable id="grado" var="g" value="#{tipoController.grados}" 
@@ -231,8 +217,10 @@
                                         </f:facet>
                                         <f:facet name="input">
                                             <p:selectOneMenu value="#{g.gradoPK.gradoAño}">
-                                                <f:selectItem itemLabel="#{tipoController.año}" itemValue="#{tipoController.año}"/>
-                                                <f:selectItem itemLabel="#{tipoController.año+1}" itemValue="#{tipoController.año+1}"/>
+                                                <f:selectItems value="#{tipoController.getAñosGrados(g)}"
+                                                               var="ag"
+                                                               itemLabel="#{ag}"
+                                                               itemValue="#{ag}"/>
                                             </p:selectOneMenu>
                                         </f:facet>
                                     </p:cellEditor>
@@ -270,46 +258,38 @@
                                     <p:rowEditor />
                                 </p:column>
                             </p:dataTable>
-                            <div class="ui-g">
-                                <div class="ui-g-12">
-                                    <p:commandButton value="+" styleClass="ui-priority-primary" 
-                                                     process="@this" update=":form:msgs"
-                                                     action="#{tipoController.onAddNew('grado')}" 
-                                                     oncomplete="PF('grado1').addRow();"
-                                                     title="Agregar Nuevo Grado"/>
-                                </div>
-                            </div>
-
+                            <p:commandButton value="+" styleClass="ui-priority-primary" 
+                                             process="@this" update=":form:msgs grado"
+                                             action="#{tipoController.onAddNew('grado')}"
+                                             title="Agregar Nuevo Grado"/>
                         </p:tab>
                         <p:tab title="Días Laborales">
-                            <p:panel header="Días en los de la semana laboral">
-                                <p:dataTable id="dias" value="#{tipoController.dias}" var="d" rowKey="#{d.idDias}"
-                                             selectionMode="single" selection="#{tipoController.diasSelected}">
-                                    <f:facet name="header">
-                                        Administración de los días laborales
-                                    </f:facet>
-                                    <p:column headerText="Número del día" style="width: 50px;">
-                                        #{d.idDias}
-                                    </p:column>
-                                    <p:column headerText="Nombre del día">
-                                        #{d.diasEstudioNombre}
-                                    </p:column>
-                                </p:dataTable>
-                                <p:commandButton title="Agregar nuevo" icon="pi pi-plus-circle" update="dias :f1"
-                                                 actionListener="#{tipoController.nuevoDias()}"
-                                                 oncomplete="PF('Ddias').show()"/>
-                                <p:contextMenu id="ctxm" for="dias">
-                                    <p:menuitem value="Agregar nuevo" icon="pi pi-plus-circle" update="dias :f1"
-                                                actionListener="#{tipoController.nuevoDias()}"
-                                                oncomplete="PF('Ddias').show()"/>
-                                    <p:menuitem value="Editar" update="f1" icon="fa fa-edit"
-                                                actionListener="#{tipoController.editarDias()}"
-                                                oncomplete="PF('Ddias').show()" />
-                                    <p:menuitem value="Eliminar" icon="pi pi-minus-circle" 
-                                                actionListener="#{tipoController.eliminarDias()}"
-                                                update="dias :f1"/>
-                                </p:contextMenu>
-                            </p:panel>
+                            <p:dataTable id="dias" value="#{tipoController.dias}" var="d" rowKey="#{d.idDias}"
+                                         selectionMode="single" selection="#{tipoController.diasSelected}">
+                                <f:facet name="header">
+                                    Administración de los días laborales
+                                </f:facet>
+                                <p:column headerText="Número del día" style="width: 50px;">
+                                    #{d.idDias}
+                                </p:column>
+                                <p:column headerText="Nombre del día">
+                                    #{d.diasEstudioNombre}
+                                </p:column>
+                            </p:dataTable>
+                            <p:commandButton title="Agregar nuevo" icon="pi pi-plus-circle" 
+                                             update="dias :f1 dias"
+                                             actionListener="#{tipoController.nuevoDias()}"/>
+                            <p:contextMenu id="ctxm" for="dias">
+                                <p:menuitem value="Agregar nuevo" icon="pi pi-plus-circle" update="dias :f1"
+                                            actionListener="#{tipoController.nuevoDias()}"
+                                            oncomplete="PF('Ddias').show()"/>
+                                <p:menuitem value="Editar" update="f1" icon="fa fa-edit"
+                                            actionListener="#{tipoController.editarDias()}"
+                                            oncomplete="PF('Ddias').show()" />
+                                <p:menuitem value="Eliminar" icon="pi pi-minus-circle" 
+                                            actionListener="#{tipoController.eliminarDias()}"
+                                            update="dias :f1"/>
+                            </p:contextMenu>
                         </p:tab>
                     </p:tabView>
                 </h:form>
