--- a/saitae-web/src/main/webapp/pages/cvista.xhtml
+++ b/saitae-web/src/main/webapp/pages/cvista.xhtml
@@ -22,8 +22,10 @@
                                     Administración de los Accesos
                                 </f:facet>
 
-                                <p:ajax event="rowEdit" listener="#{vistasMenuController.onRowEdit}" update=":form0:msgs" />
-                                <p:ajax event="rowEditCancel" listener="#{vistasMenuController.onRowCancel}" update=":form0:msgs" />
+                                <p:ajax event="rowEdit" listener="#{vistasMenuController.onRowEdit}" 
+                                        update=":form0:msgs" />
+                                <p:ajax event="rowEditCancel" listener="#{vistasMenuController.onRowCancel}" 
+                                        update=":form0:msgs" />
                                 <p:column headerText="Id" style="width: 10px">
                                     <h:outputText value="#{a.idacceso}"/>
                                 </p:column>
