--- a/saitae-web/src/main/webapp/pages/inventario.xhtml
+++ b/saitae-web/src/main/webapp/pages/inventario.xhtml
@@ -6,13 +6,13 @@
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:o="http://omnifaces.org/ui">
+                xmlns:o="http://omnifaces.org/ui">
 
     <ui:define name="content">
         <script>
-                    function socketListener(message, channel, event) {
-                        tipopp([{name: 'mss', value: message}]);
-                    }
+            function socketListener(message, channel, event) {
+                tipopp([{name: 'mss', value: message}]);
+            }
         </script>                
         <o:socket channel="tipopp" onmessage="socketListener"/>
         <h:form>
@@ -47,15 +47,10 @@
                             <p:rowEditor />
                         </p:column>
                     </p:dataTable> 
-                    <div class="ui-g">
-                        <div class="ui-g-12">
-                            <p:commandButton value="+" styleClass="ui-priority-primary" 
-                                             process="@this" update=":form:msgs"
-                                             action="#{tipoController.onAddNew('cargo')}" 
-                                             oncomplete="PF('cargo1').addRow();"
-                                             title="Agregar nuevo Tipo de Cargo para el inventario."/>
-                        </div>
-                    </div>
+                    <p:commandButton value="+" styleClass="ui-priority-primary" 
+                                     process="@this" update=":form:msgs cargo"
+                                     action="#{tipoController.onAddNew('cargo')}" 
+                                     title="Agregar nuevo Tipo de Cargo para el inventario."/>
                 </p:tab>
                 <p:tab title="Tipo Recurso">
                     <p:dataTable id="recurso" var="re" value="#{tipoController.recursos}" editable="true" 
@@ -82,15 +77,10 @@
                             <p:rowEditor />
                         </p:column>
                     </p:dataTable> 
-                    <div class="ui-g">
-                        <div class="ui-g-12">
-                            <p:commandButton value="+" styleClass="ui-priority-primary" 
-                                             process="@this" update=":form:msgs"
-                                             action="#{tipoController.onAddNew('recursos')}" 
-                                             oncomplete="PF('recurso1').addRow();"
-                                             title="Agregar nuevo Tipo de Cargo para el inventario."/>
-                        </div>
-                    </div>
+                    <p:commandButton value="+" styleClass="ui-priority-primary" 
+                                     process="@this" update=":form:msgs recurso"
+                                     action="#{tipoController.onAddNew('recursos')}" 
+                                     title="Agregar nuevo Tipo de Cargo para el inventario."/>
                 </p:tab>
                 <p:tab title="Tipo Reserva">
                     <p:dataTable id="reserva" var="res" value="#{tipoController.reservas}" editable="true" 
@@ -117,15 +107,10 @@
                             <p:rowEditor />
                         </p:column>
                     </p:dataTable> 
-                    <div class="ui-g">
-                        <div class="ui-g-12">
-                            <p:commandButton value="+" styleClass="ui-priority-primary" 
-                                             process="@this" update=":form:msgs"
-                                             action="#{tipoController.onAddNew('reserva')}" 
-                                             oncomplete="PF('reserva1').addRow();" 
-                                             title="Agregar nuevo tipo de reserva."/>
-                        </div>
-                    </div>
+                    <p:commandButton value="+" styleClass="ui-priority-primary" 
+                                     process="@this" update=":form:msgs reserva"
+                                     action="#{tipoController.onAddNew('reserva')}" 
+                                     title="Agregar nuevo tipo de reserva."/>
                 </p:tab>
             </p:tabView>
         </h:form>
