--- a/saitae-web/src/main/webapp/pages/listaRepresentantes.xhtml
+++ b/saitae-web/src/main/webapp/pages/listaRepresentantes.xhtml
@@ -30,15 +30,16 @@
                                     #{representanteController.nombreGrado}
                                 </f:facet>
                                 <p:column headerText="Dui" style="width: 100px;">
-                                    #{r.persona.idpersona}
-                                </p:column>
-                                <p:column headerText="Nombre del Representado">
-                                    #{r.persona.personaNombre} #{r.persona.personaApellido}
+                                    #{r.persona.idpersona.toString().substring(1)}
                                 </p:column>
 
                                 <p:column headerText="Nombre del Representante">
                                     #{r.estudianteRepresentante.persona.personaNombre} 
                                     #{r.estudianteRepresentante.persona.personaApellido}
+                                </p:column>                                
+                                
+                                <p:column headerText="Nombre del Representado">
+                                    #{r.persona.personaNombre} #{r.persona.personaApellido}
                                 </p:column>
                                 
                                 <p:column headerText="Firma" style="width: 25%;">
