--- a/saitae-web/src/main/webapp/pages/permiso.xhtml
+++ b/saitae-web/src/main/webapp/pages/permiso.xhtml
@@ -113,6 +113,39 @@
                                 </p:dataTable>
                             </h:panelGrid>
                         </p:tab>
+                        <p:tab title="Permisos Cancelados">
+                            <h:panelGrid columns="2" cellpadding="10">
+                                <p:dataTable id="cancelados" value="#{admPermisoController.cancelados}" var="r"
+                                             paginator="true" rows="7" selection="#{admPermisoController.acep}" 
+                                             selectionMode="single" rowKey="#{r.permisosPK}" 
+                                             emptyMessage="Sin registros aún.">
+                                    <p:ajax event="rowSelect" listener="#{admPermisoController.onRowSelect}" 
+                                            update="ace" oncomplete="PF('Dotro').show();"/>
+                                    <p:column headerText="Fecha de solicitud"
+                                               filterMatchMode="contains" 
+                                               filterBy="#{admPermisoController.dateToString(r.permisosPK.permisoFechaSolicitud)}">
+                                        #{admPermisoController.dateToString(r.permisosPK.permisoFechaSolicitud)}
+                                    </p:column>
+
+                                    <p:column headerText="Beneficiario"
+                                               filterMatchMode="contains" 
+                                               filterBy="#{r.persona.personaNombre.split(' ')[0]} 
+                                              #{r.persona.personaApellido.split(' ')[0]}">
+                                        #{r.persona.personaNombre.split(' ')[0]} 
+                                        #{r.persona.personaApellido.split(' ')[0]} 
+                                        (#{r.persona.tipoPersona.tipoPersonaNombre})
+                                    </p:column>
+
+                                    <p:column headerText="Periodo del permiso">
+                                        #{admPermisoController.getFechas(r.permisosPK.permisoFechaInicio, r.permisoFechafin)}
+                                    </p:column>
+
+                                    <p:column headerText="Tipo de permiso solicitado">
+                                        #{r.tipoPermiso1.tipoPermisoNombre}
+                                    </p:column>
+                                </p:dataTable>
+                            </h:panelGrid>
+                        </p:tab>
                         <p:tab title="Conceder Permiso A Estudiantes">
                             <h:panelGrid columns="2">
                                 <p:outputLabel for="mod" value="Bachillerato: "/>
@@ -267,12 +300,18 @@
                             <p:outputLabel value="Estado del permiso: "/>
                             <h:outputText value="#{admPermisoController.acep.permisosEstado.equals('1')
                                                     ? 'Aceptado' : (admPermisoController.acep.permisosEstado.equals('2')
-                                                    ? 'Rechazado': '????')}"/>
+                                                    ? 'Rechazado': (admPermisoController.acep.permisosEstado.equals('3')
+                                                    ? 'Cancelado': '????'))}"/>
 
                             <p:outputLabel value="Motivo del rechazo: " 
                                            rendered="#{admPermisoController.acep.permisosEstado.equals('2')}"/>
                             <h:outputText value="#{admPermisoController.comentarioAcep}"
                                            rendered="#{admPermisoController.acep.permisosEstado.equals('2')}"/>
+                            
+                            <p:outputLabel value="Motivo de la cancelación: " 
+                                           rendered="#{admPermisoController.acep.permisosEstado.equals('3')}"/>
+                            <h:outputText value="#{admPermisoController.comentarioAcep}"
+                                           rendered="#{admPermisoController.acep.permisosEstado.equals('3')}"/>
                         </h:panelGrid>
                     </h:form>
                 </p:dialog>
