--- a/saitae-web/src/main/webapp/pages/permisoE.xhtml
+++ b/saitae-web/src/main/webapp/pages/permisoE.xhtml
@@ -5,19 +5,19 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:p="http://primefaces.org/ui"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-
     <body>
-
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
-
             <ui:define name="content">
+                <f:event listener="#{permisoEstController.postRender()}" type="preRenderView"/>
                 <h:form id="frm">
-                    <h1 header="Solicitud de Permisos"/>
+                    <p:growl id="msgs" showDetail="true" life="20000"/>
+                    <h1 align="center"> Solicitud de Permisos</h1>
                     <h:panelGrid columns="3">
                         <p:outputLabel for="tp" value="Tipo de permiso a solicitar: "/>
                         <p:selectOneMenu id="tp" immediate="true" required="true" style="width: 400px;"
                                          value="#{permisoEstController.p.tipoPermiso1}"
-                                         converter="omnifaces.SelectItemsConverter">
+                                         converter="omnifaces.SelectItemsConverter"
+                                         disabled="#{permisoEstController.editar}">
                             <f:selectItem itemValue="null" itemLabel="Seleccione" noSelectionOption="true"/>
                             <f:selectItems value="#{permisoEstController.listaPermisos}" var="tpe"
                                            itemValue="#{tpe}" itemLabel="#{tpe.tipoPermisoNombre}"/>
@@ -28,7 +28,7 @@
                         <p:outputLabel for="es" value="¿Para quién es el permiso? "/>
                         <p:selectOneMenu id="es" immediate="true" required="true" 
                                          value="#{permisoEstController.id}" style="width: 400px;"
-                                         disabled="#{!permisoEstController.seleccionPermiso}"
+                                         disabled="#{permisoEstController.disabled()}"
                                          converter="omnifaces.SelectItemsConverter">
                             <f:selectItem itemValue="0" itemLabel="Seleccione" noSelectionOption="true"/>
                             <f:selectItems value="#{permisoEstController.e}" var="ess"
@@ -41,17 +41,17 @@
                         <p:message for="es"/>
 
                         <p:outputLabel for="m" value="El estudiante está matriculado en:  "/>
-                        <p:outputLabel id="m" value="   #{permisoEstController.m.grado.gradoPK.idgrado==1
-                                                          ? 'Primero': (permisoEstController.m.grado.gradoPK.idgrado==2
-                                                          ? 'Segundo' : (permisoEstController.m.grado.gradoPK.idgrado==3
-                                                          ? 'Tercero': ' '))} #{permisoEstController.m.grado.gradoPK.gradoModalidad.equals('C') 
-                                                          ? 'Contador' : (permisoEstController.m.grado.gradoPK.gradoModalidad.equals('S')
-                                                          ? 'Secretariado' : (permisoEstController.m.grado.gradoPK.gradoModalidad.equals('G')
-                                                          ? 'General' : ' '))} #{permisoEstController.m.grado.gradoPK.gradoSeccion} "
+                        <p:outputLabel id="m" value="#{permisoEstController.m.grado.gradoPK.idgrado==1
+                                                       ? 'Primero': (permisoEstController.m.grado.gradoPK.idgrado==2
+                                                       ? 'Segundo' : (permisoEstController.m.grado.gradoPK.idgrado==3
+                                                       ? 'Tercero': ' '))} #{permisoEstController.m.grado.gradoPK.gradoModalidad.equals('C') 
+                                                       ? 'Contador' : (permisoEstController.m.grado.gradoPK.gradoModalidad.equals('S')
+                                                       ? 'Secretariado' : (permisoEstController.m.grado.gradoPK.gradoModalidad.equals('G')
+                                                       ? 'General' : ' '))} #{permisoEstController.m.grado.gradoPK.gradoSeccion} "
                                        style="width: 400px;"/>
                         <p:column/>
 
-                        <p:outputLabel for="mot" value="Motivo: *"/>
+                        <p:outputLabel for="mot" value="Motivo: "/>
                         <p:inputText id="mot" value="#{permisoEstController.p.permisosMotivo}" required="true" 
                                      label="El motivo de la solicitud de permiso" style="width: 400px;"/>
                         <p:message for="mot"/>
@@ -64,12 +64,14 @@
 
                         <p:outputLabel for="mask" value="Fecha de inicio:" />
                         <p:datePicker id="mask" value="#{permisoEstController.p.permisosPK.permisoFechaInicio}"
-                                      showIcon="true" required="true" pattern="dd/MM/yyyy"/>
+                                      showIcon="true" required="true" pattern="dd/MM/yyyy" locale="es"
+                                      disabledDays="#{permisoEstController.invalidDays}"/>
                         <p:message for="mask"/>
 
                         <p:outputLabel for="mask1" value="Fecha de finalización: " />
                         <p:datePicker id="mask1" value="#{permisoEstController.p.permisoFechafin}"
-                                      showIcon="true" required="true" pattern="dd/MM/yyyy"/>
+                                      showIcon="true" required="true" pattern="dd/MM/yyyy" locale="es"
+                                      disabledDays="#{permisoEstController.invalidDays}"/>
 
                         <p:column/>
                         <p:column/>
@@ -81,8 +83,6 @@
                 </h:form>
                 <h:outputScript library="js" name="locales.js"/>
             </ui:define>
-
         </ui:composition>
-
     </body>
 </html>
