--- a/saitae-web/src/main/webapp/pages/solicitudRPP.xhtml
+++ b/saitae-web/src/main/webapp/pages/solicitudRPP.xhtml
@@ -11,6 +11,7 @@
         <ui:composition template="./../WEB-INF/template/plantilla1.xhtml">
 
             <ui:define name="content">
+                <f:event listener="#{solicitudPPController.preRender()}" type="preRenderView"/>
                 <style type="text/css">
                     .value {
                         font-weight: bold;
